[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Tool.gd" type="Script" id=1]
[ext_resource path="res://scripts/Play.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/GameDropdown.gd" type="Script" id=4]
[ext_resource path="res://scripts/AttributesWindow.gd" type="Script" id=5]
[ext_resource path="res://scenes/AttributeEdit.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Tool" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Play" type="Node2D" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
margin_right = 2050.0
margin_bottom = 2730.0
__meta__ = {
"_edit_lock_": true
}

[node name="GameDropdown" type="OptionButton" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1019.59
margin_top = 10.0
margin_right = -493.594
margin_bottom = 54.0
theme = SubResource( 2 )
align = 1
script = ExtResource( 4 )

[node name="AddGameButton" type="Button" parent="UI"]
margin_left = 550.0
margin_top = 10.0
margin_right = 628.0
margin_bottom = 30.0
text = "NewGame"

[node name="SaveGameButton" type="Button" parent="UI"]
margin_left = 550.0
margin_top = 40.0
margin_right = 629.0
margin_bottom = 60.0
text = "SaveGame"

[node name="DeleteGameButton" type="Button" parent="UI"]
margin_left = 640.0
margin_top = 10.0
margin_right = 733.0
margin_bottom = 30.0
text = "DeleteGame"

[node name="NewCircleButton" type="Button" parent="UI"]
margin_left = 790.0
margin_top = 10.0
margin_right = 866.0
margin_bottom = 30.0
text = "NewCircle"

[node name="NewGameDialog" type="WindowDialog" parent="UI"]
visible = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -207.0
margin_top = 178.0
margin_right = 208.0
margin_bottom = 300.0
window_title = "What's your new game called?"

[node name="NewGameOkButton" type="Button" parent="UI/NewGameDialog"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -41.0
margin_right = 36.0
margin_bottom = -9.0
text = "Ok"

[node name="NewGameLineEdit" type="LineEdit" parent="UI/NewGameDialog"]
margin_left = 16.0
margin_top = 14.0
margin_right = 397.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )

[node name="DeleteGameConfirm" type="ConfirmationDialog" parent="UI"]
margin_left = 826.0
margin_top = 170.0
margin_right = 1226.0
margin_bottom = 310.0
window_title = "Delete Game?"

[node name="AttributesWindow" type="WindowDialog" parent="UI"]
visible = true
margin_left = 1110.0
margin_top = 408.0
margin_right = 1950.0
margin_bottom = 494.0
window_title = "Disc"
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AttributeEdit" parent="UI/AttributesWindow" instance=ExtResource( 6 )]

[node name="ToggleUiButton" type="Button" parent="."]
margin_left = 2020.0
margin_top = 10.0
margin_right = 2044.0
margin_bottom = 30.0
text = "ui"
[connection signal="item_selected" from="UI/GameDropdown" to="." method="_on_GameDropdown_item_selected"]
[connection signal="pressed" from="UI/AddGameButton" to="." method="_on_AddGameButton_pressed"]
[connection signal="pressed" from="UI/SaveGameButton" to="." method="_on_SaveGameButton_pressed"]
[connection signal="pressed" from="UI/DeleteGameButton" to="." method="_on_DeleteGameButton_pressed"]
[connection signal="pressed" from="UI/NewCircleButton" to="." method="_on_NewCircleButton_pressed"]
[connection signal="pressed" from="UI/NewGameDialog/NewGameOkButton" to="." method="_on_NewGameOkButton_pressed"]
[connection signal="text_entered" from="UI/NewGameDialog/NewGameLineEdit" to="." method="_on_NewGameLineEdit_text_entered"]
[connection signal="confirmed" from="UI/DeleteGameConfirm" to="." method="_on_DeleteGameConfirm_confirmed"]
[connection signal="value_updated" from="UI/AttributesWindow" to="." method="_on_AttributesWindow_value_updated"]
[connection signal="pressed" from="ToggleUiButton" to="." method="_on_ToggleUiButton_pressed"]
